# example-dimitriOS-cmake-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
